--- a/app/src/main/res/values-de/strings_connect.xml
+++ b/app/src/main/res/values-de/strings_connect.xml
@@ -65,7 +65,7 @@
 
     <!-- PRINTER CONNECTOR -->
     <string name="main_printer_connected_title">Drucker verbunden</string>
-    <string name="main_printer_connected_msg">Printoid kann nun mit dem Drucker kommunizieren.</string>
+    <string name="main_printer_connected_msg">Printoid kann nun mit dem Drucker kommunizieren!</string>
     <string name="main_printer_connection_error_title">Verbindungsfehler</string>
     <string name="main_printer_connection_error_msg">Printoid kann sich nicht mit dem Drucker verbinden.\nBitte prüfe die Verbindung deines Raspberry Pis, deinen seriellen Port und die Stromversorgung des Druckers.</string> <!-- ########## "and power-on the printer" I would wrote something like "check the power supply" instead - so the people don't feel like somebody thinks they are stupid ;) -->
 
