--- a/app/src/main/res/values/strings_hub.xml
+++ b/app/src/main/res/values/strings_hub.xml
@@ -26,5 +26,6 @@
     <string name="hub_setting_hide_second_icon_tip">Hide the second app icon to start Printoid Hub from your app launcher</string>
 
     <string name="hub_show_camera"><u>Show camera…</u></string>
+    <string name="hub_show_other_camera"><u>Show the other camera…</u></string>
 
 </resources>
