--- a/app/src/main/res/values/strings_connect.xml
+++ b/app/src/main/res/values/strings_connect.xml
@@ -1,49 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- CONNECTOR BASE -->
     <string name="connector_connection_title">Connection</string>
     <string name="connector_connection_to_title">Connection to %s</string>
-    <string name="connector_connection_step_1" tools:ignore="TypographyFractions">Step 1/3</string>
-    <string name="connector_connection_step_2" tools:ignore="TypographyFractions">Step 2/3</string>
-    <string name="connector_connection_step_3" tools:ignore="TypographyFractions">Step 3/3</string>
-
-    <!-- CONNECTOR STEP 1 (PING) -->
-    <string name="connector_connecting_title">Connection step 1 (ping)</string>
-    <string name="connector_connecting_msg">Contacting your OctoPrint server from %1$s&#8230;\n\nAddress: %2$s</string>
-    <string name="connector_connecting_failed_title">Step 1 failed (ping)</string>
-    <string name="connector_connecting_failed_msg"><![CDATA[Printoid could not contact your OctoPrint server from %1$s. Please check your local network and the provided IP.<br><br><b>Extra informations:</b><br><br>%2$s]]></string>
+    <string name="connector_connection_to_subtitle">Printoid tries to contact OctoPrint…</string>
 
     <!-- CONNECTOR STEP 2 (CHECK IP) -->
-    <string name="connector_communicating_title">Connection step 2 (IP test)</string>
-    <string name="connector_communicating_msg">Printoid is establishing the communication with your OctoPrint server from %1$s&#8230;\n\nAddress: %2$s</string>
-    <string name="connector_communication_failed_title">Step 2 failed (IP test)</string>
-    <string name="connector_communication_failed_msg"><![CDATA[Printoid could not communicate with your OctoPrint server from %1$s. Please check your network connection and your configuration then retry.<br><br><b>Extra informations:</b><br><br>%2$s]]></string>
-
-    <!-- CONNECTOR STEP 3 (CHECK API) -->
-    <string name="connector_testing_title">Connection step 3 (API test)</string>
-    <string name="connector_testing_msg">Printoid is communicating with your printer from %1$s&#8230;\n\nAddress: %2$s</string>
-    <string name="connector_test_failed_title">Step 3 failed (API test)</string>
-    <string name="connector_test_failed_msg"><![CDATA[Printoid could not send commands to your printer from %1$s. Please contact the developer of Printoid.<br><br><b>Extra informations:</b><br><br>%2$s]]></string>
+    <string name="connector_communication_failed_title">Connection failed</string>
+    <string name="connector_communication_failed_msg"><![CDATA[Printoid could not communicate with your OctoPrint server over %1$s. Please check your network connection and your configuration then retry.<br><br><b>Extra informations:</b><br><br>%2$s]]></string>
 
     <!-- EXTRA MSG: VPN ACTIVE-->
     <string name="connector_failed_vpn">\n\nNote: Printoid has detected an active VPN on your device, may this one can cause connection issues.</string>
 
     <!-- CONNECTOR STATUS -->
-    <string name="connector_communication_established_title">Communication established</string>
-    <string name="connector_communication_established_msg">Printoid is now ready to communicate with OctoPrint server.\nYou can connect your server to the printer from the left menu.</string>
     <string name="octoprint_connection_lost">Connection with OctoPrint server lost</string>
     <string name="connector_profile_not_completed_title">OctoPrint profile not completed</string>
     <string name="connector_profile_not_completed_message">The OctoPrint profile you\'ve configured or selected seems not completed.\nPlease fix it before trying to connect.</string>
-    <string name="connector_communication_canceled">Connection canceled</string>
     <string name="connector_communication_established_with">Connection with %s established</string>
     <string name="connector_communication_canceled_with">Connection with %s canceled</string>
 
     <!-- CONNECTOR ERRORS -->
     <string name="connector_error_format_multiple_ip"><![CDATA[First test: <b>%1$s</b><br>-> %2$s<br><br>Second test: <b>%3$s</b><br>-> %4$s]]></string>
-    <string name="connector_error_server_not_reachable">Server not reachable</string>
-    <string name="connector_error_unknown_host">Unknown host</string>
-    <string name="connector_error_io_error">IO error</string>
     <string name="connector_error_empty_response">Empty response</string>
     <string name="connector_error_none_response">No response</string>
     <string name="connector_error_connectivity_response">No connectivity or signal too bad, please check your current network</string>
