[DEV][13.03] Use Kotlin coroutine instead of AsyncTask for connection process

--- a/app/src/main/res/values/strings_http.xml
+++ b/app/src/main/res/values/strings_http.xml
@@ -95,6 +95,7 @@
 
     <!-- UNSUPPORTED & UNOFFICIAL CODES -->
 
+    <string name="http_exception_connect" translatable="false">Connect Exception</string>
     <string name="http_error_unknown" translatable="false">Unknown Error</string>
 
 </resources>
