--- a/app/src/main/res/values-es/strings_alerts.xml
+++ b/app/src/main/res/values-es/strings_alerts.xml
@@ -13,8 +13,12 @@
     <string name="alert_pro_feature_realtime_layers_msg">Esta es la versión gratuita de Printoid.\nEl visor capa a capa en tiempo real está disponible en la version Pro, descárgala ahora en Google Play!</string>
     <string name="alert_pro_feature_spools_manager_msg">Esta es la versión gratuita de Printoid.\nEl módulo administrador de spool de filamento está disponible en la versión PRO, descárguelo ahora en Google Play!</string>
 
-    <string name="alert_cancel_print_title">Abortar impresión actual</string>
+    <string name="alert_cancel_print_title">Abortar la impresión actual</string>
     <string name="alert_cancel_print_msg">La impresión será cancelada, ¿está seguro?\nUna impresión cancelada no puede ser restaurada a su estado actual, por lo que su trabajo se perderá.</string>
+
+    <string name="alert_start_print_title">Iniciar la impresión</string>
+    <string name="alert_start_print_msg">La impresión se iniciará para el archivo seleccionado actualmente, ¿desea continuar?</string>
+    <string name="alert_start_print_file_msg">La impresión se iniciará para el archivo <b>%s</b>, ¿desea continuar?</string>
 
     <string name="alert_pause_print_title">Pausa la impresión</string>
     <string name="alert_pause_print_msg">Este trabajo de impresión se detendrá, ¿está seguro?</string>
